--- a/druid-spring-boot/pom.xml
+++ b/druid-spring-boot/pom.xml
@@ -10,12 +10,12 @@
         <version>1.1.2-SNAPSHOT</version>
     </parent>
 
-    <artifactId>druid-spring-boot-actuator</artifactId>
+    <artifactId>druid-spring-boot</artifactId>
     <packaging>pom</packaging>
 
     <modules>
-        <module>druid-spring-boot-actuator-autoconfigure</module>
-        <module>druid-spring-boot-actuator-starter</module>
+        <module>druid-spring-boot-autoconfigure</module>
+        <module>druid-spring-boot-starter</module>
     </modules>
 
 </project>
