update example package name

--- a/druid-spring-boot-example/druid-spring-boot-mybatis-example/src/main/resources/application.yml
+++ b/druid-spring-boot-example/druid-spring-boot-mybatis-example/src/main/resources/application.yml
@@ -73,7 +73,7 @@ spring:
       preferred-json-mapper: jackson
 
 mybatis:
-  type-aliases-package: com.github.trang.druid.model
+  type-aliases-package: com.github.trang.druid.example.model
 
 ---
 
