--- a/druid-spring-boot-actuator/druid-spring-boot-actuator-starter/pom.xml
+++ b/druid-spring-boot-actuator/druid-spring-boot-actuator-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot-actuator</artifactId>
-        <version>1.1.5</version>
+        <version>1.1.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>druid-spring-boot-actuator-starter</artifactId>
@@ -20,11 +20,6 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
