--- a/druid-spring-boot-example/druid-spring-boot-mybatis-example/pom.xml
+++ b/druid-spring-boot-example/druid-spring-boot-mybatis-example/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot-example</artifactId>
-        <version>1.1.5</version>
+        <version>1.1.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>druid-spring-boot-mybatis-example</artifactId>
@@ -64,15 +64,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <includes>
-                        <include>com/github/trang/druid/test/*</include>
-                    </includes>
-                </configuration>
             </plugin>
         </plugins>
     </build>
