--- a/druid-spring-boot-example/druid-spring-boot-mybatis-example/src/main/resources/application.yml
+++ b/druid-spring-boot-example/druid-spring-boot-mybatis-example/src/main/resources/application.yml
@@ -81,6 +81,8 @@ spring:
 
 mybatis:
   type-aliases-package: com.github.trang.druid.example.mybatis.model
+  configuration:
+    map-underscore-to-camel-case: true
 
 ---
 
