--- a/druid-spring-boot-example/druid-spring-boot-jpa-example/src/main/resources/application.yml
+++ b/druid-spring-boot-example/druid-spring-boot-jpa-example/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     ansi:
       enabled: detect
   datasource:
-    url: jdbc:h2:file:./samples
+    url: jdbc:h2:mem:example
     username: root
     password: 123456
     schema: classpath:/import.sql
