--- a/druid-spring-boot-example/druid-spring-boot-jpa-example/src/main/resources/application.yml
+++ b/druid-spring-boot-example/druid-spring-boot-jpa-example/src/main/resources/application.yml
@@ -6,11 +6,15 @@ logging:
     org.springframework: info
     org.springframework.jdbc: debug
     org.mybatis: debug
+    com.alibaba.druid: debug
     com.github.trang: debug
 
 spring:
+  application:
+    name: druid-spring-boot-jpa-example
   profiles:
     # 默认环境为 default，多数据源演示请改为 dynamic
+    # active: dynamic
     active: default
   output:
     ansi:
@@ -19,7 +23,7 @@ spring:
     url: jdbc:h2:mem:example
     username: root
     password: 123456
-    schema: classpath:/import.sql
+    schema: classpath:import.sql
     druid:
       # spring.datasource.druid 前缀的配置将注入到 DruidDataSource2Support，作为公共参数
       initial-size: 1
@@ -68,6 +72,11 @@ spring:
       # 默认关闭，需手动开启，当前已关闭
       stat-view-servlet:
         enabled: false
+  h2:
+    console:
+      enabled: true
+      settings:
+        trace: true
   jpa:
     hibernate:
       ddl-auto: update
@@ -78,9 +87,24 @@ spring:
     proxy-target-class: true
   http:
     encoding:
+      enabled: true
       force: true
+      charset: utf-8
     converters:
       preferred-json-mapper: jackson
+  jackson:
+    default-property-inclusion: non_null
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
+    serialization:
+      indent_output: true
+      write_null_map_values: true
+      write_dates_as_timestamps: false
+    deserialization:
+      fail_on_unknown_properties: false
+    parser:
+      allow_unquoted_control_chars: true
+      allow_single_quotes: true
 
 ---
 
@@ -94,12 +118,15 @@ spring:
       # 循环依赖，所以需要手动排除 `org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration`
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
   datasource:
+    schema: classpath:import.sql
     druid:
       # 继承 spring.datasource.druid 前缀的配置，同时可以自定义配置，若名称相同则覆盖父配置
       data-sources:
         master:
+          url: jdbc:h2:mem:master
           max-active: 50
           max-open-prepared-statements: 50
         slave:
+          url: jdbc:h2:mem:slave
           max-active: 25
           max-open-prepared-statements: 25
