--- a/druid-spring-boot-actuator/pom.xml
+++ b/druid-spring-boot-actuator/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot-parent</artifactId>
-        <version>1.1.7</version>
+        <version>1.1.7-SNAPSHOT</version>
     </parent>
 
     <artifactId>druid-spring-boot-actuator</artifactId>
