--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>parent</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <artifactId>druid-spring-boot-parent</artifactId>
-    <version>1.1.7-SNAPSHOT</version>
+    <version>1.1.7</version>
     <packaging>pom</packaging>
 
     <name>Druid Spring Boot Starter</name>
@@ -40,7 +40,7 @@
     <scm>
         <connection>scm:git:https://github.com/drtrang/druid-spring-boot.git</connection>
         <developerConnection>scm:git:git@github.com:drtrang/druid-spring-boot.git</developerConnection>
-        <url>https://github.com/drtrang/druid-spring-boot.git</url>
+        <url>https://github.com/drtrang/druid-spring-boot</url>
     </scm>
 
     <issueManagement>
