--- a/druid-spring-boot/druid-spring-boot-autoconfigure/pom.xml
+++ b/druid-spring-boot/druid-spring-boot-autoconfigure/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot</artifactId>
-        <version>1.1.7</version>
+        <version>1.1.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>druid-spring-boot-autoconfigure</artifactId>
