--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>druid-spring-boot-parent</artifactId>
-    <version>1.1.7</version>
+    <version>1.1.8-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Druid Spring Boot Starter</name>
@@ -55,7 +55,7 @@
     </modules>
 
     <properties>
-        <druid.version>1.1.7</druid.version>
+        <druid.version>1.1.8</druid.version>
     </properties>
 
     <dependencyManagement>
