--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,10 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>parent</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
 
+    <groupId>com.github.drtrang</groupId>
     <artifactId>druid-spring-boot-parent</artifactId>
     <version>1.1.8-SNAPSHOT</version>
     <packaging>pom</packaging>
