--- a/druid-spring-boot-example/druid-spring-boot-jpa-example/src/main/resources/application.yml
+++ b/druid-spring-boot-example/druid-spring-boot-jpa-example/src/main/resources/application.yml
@@ -26,6 +26,7 @@ spring:
     password: 123456
     schema: classpath:import.sql
     druid:
+      max-wait: 30000
       query-timeout: 10
       validation-query: SELECT 1
       use-global-data-source-stat: true
